#pragma once

#include "common.hpp"
#include "Apartment.hpp"

class Hall : public Apartment
{
public:
    Hall();
    ~Hall();
};